create adding functionality

--- a/src/main/webapp/WEB-INF/views/employees.html
+++ b/src/main/webapp/WEB-INF/views/employees.html
@@ -22,5 +22,8 @@
       <td th:text="${emp.salary}">salary</td>
   </tr>
 </table>
+  <br>
+  <input type="button" value="Add" onclick="window.location.href = 'add'"/>
+  <a href="/add"><button type="button">Add</button></a>
 </body>
 </html>
