--- a/src/main/webapp/WEB-INF/views/employees.html
+++ b/src/main/webapp/WEB-INF/views/employees.html
@@ -23,6 +23,7 @@
       <td th:text="${emp.salary}">salary</td>
       <td>
           <a th:href="@{/update/{id}(id=${emp.id})}"><button type="button">Update</button></a>
+          <a th:href="@{/delete/{id}(id=${emp.id})}"><button type="button">Delete</button></a>
       </td>
   </tr>
 </table>
